@@ -38,6 +38,19 @@ jobs:
         uses: ./.github/actions/e2e-tests
         continue-on-error: true
 
+      - name: Collect Docker logs
+        run: |
+          mkdir -p test-e2e/debug
+          docker ps -a >test-e2e/debug/docker.log
+
+      - name: Collect Bind9 logs
+        run: |
+          docker logs bind9 >test-e2e/debug/bind9.log
+
+      - name: Collect PolarDNS logs
+        run: |
+          docker logs polardns >test-e2e/debug/polardns.log
+
       - name: Compress test results
         run: tar -czf test-e2e-results-bind9-${{ matrix.version }}.tar.gz -C test-e2e .
 
@@ -48,16 +61,3 @@ jobs:
           name: test-e2e-results-bind9-${{ matrix.version }}
           if-no-files-found: ignore
 
-      - name: Debug running containers
-        if: failure()
-        run: |
-          docker ps -a
-
-      - name: Debug Bind9
-        if: failure()
-        run: |
-          docker logs Bind9
-
-      - name: Debug PolarDNS
-        run: |
-          docker logs polardns
