@@ -37,6 +37,19 @@ jobs:
         uses: ./.github/actions/e2e-tests
         continue-on-error: true
 
+      - name: Collect Docker logs
+        run: |
+          mkdir -p test-e2e/debug
+          docker ps -a >test-e2e/debug/docker.log
+
+      - name: Collect Knot logs
+        run: |
+          docker logs knot-resolver >test-e2e/debug/knot-resolver.log
+
+      - name: Collect PolarDNS logs
+        run: |
+          docker logs polardns >test-e2e/debug/polardns.log
+
       - name: Compress test results
         run: tar -czf test-e2e-results-knot6-${{ matrix.version }}.tar.gz -C test-e2e .
 
@@ -47,16 +60,3 @@ jobs:
           name: test-e2e-results-knot6-${{ matrix.version }}
           if-no-files-found: ignore
 
-      - name: Debug running containers
-        if: failure()
-        run: |
-          docker ps -a
-
-      - name: Debug Knot
-        if: failure()
-        run: |
-          docker logs knot-resolver
-
-      - name: Debug PolarDNS
-        run: |
-          docker logs polardns
